<resources>
    <string name="app_name">CompuStore</string>
    <string name="title_activity_add_new_product">AddNewProductActivity</string>
    <string name="Order_Tag">Número de orden: </string>
    <string name="Order_status">Estado de orden: </string>
    <string name="Order_client">Cliente : </string>
    <string name="Order_date">Fecha: </string>
    <string name="modify_order_status">Modificar Estado</string>
    <string name="Add_order_tittle">Agregar Orden </string>
    <string name="Confirm_order"> Confirmar </string>
    <string name="Cancel_order">Cancelar </string>
    <string name="Commentaries">Comentarios de la actualización:</string>
    <string name="add_Commentaries">Agregar comentarios...</string>
    <string name="actualization">Actualizaciones anteriores:</string>
    <string name="show_allassemblies">Mostrar todos \n los ensambles</string>

    <string name="Modiy_order_tittle">Modificar Ensamble</string>

    Comentarios de la actulización


    <string-array name="spinnerItems">
        <item>Estados</item>
    </string-array>
    <string-array name="spinnerClientsItems">
        <item>Todos</item>
    </string-array>
</resources>
